cant decide the color

--- a/view/F1Store/index.html
+++ b/view/F1Store/index.html
@@ -10,7 +10,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Lato:ital,wght@0,100;0,300;0,400;0,700;0,900;1,100;1,300;1,400;1,700;1,900&family=Roboto+Mono:ital,wght@0,100..700;1,100..700&family=Roboto:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
 </head>
 <body>
-    <header>
+    <header id="header">
         <nav id="header-menu">
             <ul class="navbar-ul">
                 <li id="main-item"><span id="rbr">RBR</span><span id="store">Store</span></li>
@@ -19,7 +19,7 @@
                 <input id="search-input" type="text" placeholder="O que você está procurando?">
             </form>
             <ul id="navbar-main" class="navbar-ul">
-                <li class="header-item"><a href="">Home</a></li>
+                <li class="header-item"><a href="#header">Home</a></li>
                 <li class="header-item"><a href="">About Us</a></li>
                 <li class="header-item"><a href="">Feature</a></li>
                 <li class="header-item"><a href="">Blog</a></li>
