--- a/view/css/register.css
+++ b/view/css/register.css
@@ -113,6 +113,7 @@ main {
     flex-direction: column;
     align-items: center;
     padding: 50px;
+    justify-content: center;
 }
 
 #halfOne h1 {
@@ -144,8 +145,6 @@ label {
 
 .register-form-input:focus {
     outline: 2px solid red;
-    padding: 10px;
-    padding: 15px;
 }
 
 .side-by-side {
